plugins {
    id 'java'
}

group 'ch.szclsb'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.1'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.register('buildNative', Exec) {
    workingDir "${project.projectDir}"
    doFirst {
        println "Compiling native dll"
    }
    commandLine 'cmd', '/c', 'build-native.bat'
    doLast {
        println "Finished building dll"
    }
}

compileJava {
    dependsOn buildNative
    options.compilerArgs += "--enable-preview"

}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileTestJava {
    options.compilerArgs += "--enable-preview"
}

test {
    useJUnitPlatform()
    jvmArgs("--enable-preview", "--enable-native-access=ch.szclsb.rkb.driver")
}
